--- a/.env
+++ b/.env
@@ -16,8 +16,19 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=12345678
 DB_DATABASE=petshop
+DB_SSL = false
 
-DB_ROOT_PASSWORD=12345678ss
+
+#Render_Database
+# DB_TYPE=postgres
+# DB_HOST=dpg-cjf653ue546c739e5hfg-a.oregon-postgres.render.com
+# DB_PORT=5432
+# DB_USERNAME=petshop_51bv_user   
+# DB_PASSWORD=6Ts2ishPHHyWkFMDC6fFOnLThRhQLaoj
+# DB_DATABASE=petshop_51bv
+# DB_SSL = true
+
+DB_ROOT_PASSWORD=12345678
 DB_ALLOW_EMPTY_PASSWORD=yes
 
 ENABLE_ORM_LOGS = true
