--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@fastify/compress": "^6.2.0",
         "@fastify/helmet": "^10.1.0",
         "@fastify/static": "^6.6.1",
+        "@nestjs-modules/mailer": "^1.9.1",
         "@nestjs/common": "^9.2.1",
         "@nestjs/config": "^2.2.0",
         "@nestjs/core": "^9.2.1",
@@ -49,7 +50,7 @@
         "lodash": "^4.17.21",
         "morgan": "^1.10.0",
         "nest-winston": "^1.8.0",
-        "nodemailer": "^6.9.4",
+        "nodemailer": "^6.9.7",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
