--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@nestjs/platform-fastify": "^9.2.1",
         "@nestjs/swagger": "^6.1.4",
         "@nestjs/typeorm": "^9.0.1",
+        "@stripe/stripe-js": "^2.2.0",
         "@types/nodemailer": "^6.4.9",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
@@ -77,6 +78,7 @@
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
         "@types/response-time": "^2.3.5",
+        "@types/stripe": "^8.0.417",
         "@types/supertest": "^2.0.12",
         "@types/uuid": "^9.0.0",
         "@types/webpack-env": "^1.18.0",
